--- a/docs/items/ingots/ingots.mdx
+++ b/docs/items/ingots/ingots.mdx
@@ -5,8 +5,9 @@ title: Ingots
 
 <ItemImage file="aluminium_ingot" alt="Ingots" size="200" />
 
-Ingots are made from Ores.
+Ingots are made from either ore or dust, generally smelt in a furnace.
 
+- <McItem slug="advanced_alloy_ingot" pack="techreborn"/> 
 - <McItem slug="aluminium_ingot" pack="techreborn"/> 
 - <McItem slug="brass_ingot" pack="techreborn"/> 
 - <McItem slug="bronze_ingot" pack="techreborn"/> 
@@ -28,6 +29,7 @@ Ingots are made from Ores.
 - <McItem slug="refined_iron_ingot" pack="techreborn"/> 
 - <McItem slug="advanced_alloy_ingot" pack="techreborn"/> 
 - <McItem slug="iridium_alloy_ingot" pack="techreborn"/> 
+- <McItem slug="mixed_metal_ingot" pack="techreborn"/> 
 
 
 
