--- a/docs/items/ingots/platinum_ingot.mdx
+++ b/docs/items/ingots/platinum_ingot.mdx
@@ -4,4 +4,29 @@ title: Platinum Ingot
 
 <ItemImage file="platinum_ingot" alt="Ingots" size="200" />
 
-Ingots are made from Ores.
+# Platinum Ingot
+
+**Platinum Ingot** used to craft several recipes.
+
+## Recipe
+
+<CraftingTable recipe="input techreborn:platinum_nugget techreborn:platinum_nugget techreborn:platinum_nugget input techreborn:platinum_nugget techreborn:platinum_nugget techreborn:platinum_nugget input techreborn:platinum_nugget techreborn:platinum_nugget techreborn:platinum_nugget output techreborn:platinum_ingot"/>
+<CraftingTable recipe="input air air air input air techreborn:platinum_storage_block air input air air air output techreborn:platinum_ingot,9"/>
+Smelting recipes:  
+<McItem slug="techreborn:platinum_dust" inline={true}/> &rarr; <McItem slug="techreborn:platinum_ingot" inline={true}/>  
+<McItem slug="techreborn:sheldonite_ore" inline={true}/> &rarr; <McItem slug="techreborn:platinum_ingot" inline={true}/>  
+<McItem slug="techreborn:deepslate_sheldonite_ore" inline={true}/> &rarr; <McItem slug="techreborn:platinum_ingot" inline={true}/>
+
+## Usage
+
+**Platinum Ingot** could be used as a **Beacon** payment.
+
+**Crafting** recipes:  
+<CraftingTable recipe="input techreborn:platinum_ingot techreborn:platinum_ingot techreborn:platinum_ingot input techreborn:platinum_ingot techreborn:platinum_ingot techreborn:platinum_ingot input techreborn:platinum_ingot techreborn:platinum_ingot techreborn:platinum_ingot output techreborn:platinum_storage_block"/>
+<CraftingTable recipe="input air air air input air techreborn:platinum_ingot air input air air air output techreborn:platinum_nugget,9"/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:platinum_ingot" inline={true}/> &rarr; <McItem slug="techreborn:platinum_dust" inline={true}/>
+
+<McItem slug="techreborn:compressor" inline={true}/> recipe:  
+<McItem slug="techreborn:platinum_ingot" inline={true}/> &rarr; <McItem slug="techreborn:platinum_plate" inline={true}/>
