--- a/docs/items/ingots/aluminium_ingot.mdx
+++ b/docs/items/ingots/aluminium_ingot.mdx
@@ -4,4 +4,32 @@ title: Aluminium Ingot
 
 <ItemImage file="aluminium_ingot" alt="Ingots" size="200" />
 
-Ingots are made from Ores.
+# Aluminum Ingot
+
+**Aluminum Ingot** is used to craft <McItem slug="techreborn:mixed_metal_ingot" inline={true}/> and for further processing. Tech Reborn doesn't have Aluminum ore.
+
+## Recipe
+
+<CraftingTable recipe="input techreborn:aluminum_nugget techreborn:aluminum_nugget techreborn:aluminum_nugget input techreborn:aluminum_nugget techreborn:aluminum_nugget techreborn:aluminum_nugget input techreborn:aluminum_nugget techreborn:aluminum_nugget techreborn:aluminum_nugget output techreborn:aluminum_ingot"/>
+<CraftingTable recipe="input air air air input air techreborn:aluminum_storage_block air input air air air output techreborn:aluminum_ingot,9"/>
+
+<McItem slug="techreborn:blast_furnace" inline={true}/> recipe:  
+<McItem slug="techreborn:aluminum_dust" inline={true}/> -> <McItem slug="techreborn:aluminum_ingot" inline={true}/>. This recipe requires 1700 heat.
+
+## Usage
+
+**Aluminum Ingot** could be used as a **Beacon** payment.  
+**Aluminum Ingot** is used in the following <McItem slug="minecraft:crafting_table" inline={true}/> recipes:
+
+- <McItem slug="techreborn:mixed_metal_ingot" inline={true}/>
+- <McItem slug="techreborn:aluminum_nugget" inline={true}/>
+- <McItem slug="techreborn:aluminum_storage_block" inline={true}/>
+
+<McItem slug="techreborn:compressor" inline={true}/> recipe:  
+<McItem slug="techreborn:aluminum_ingot" inline={true}/> -> <McItem slug="techreborn:aluminum_plate" inline={true}/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:aluminum_ingot" inline={true}/> -> <McItem slug="techreborn:aluminum_dust" inline={true}/>
+
+\<mcitem\>techreborn:rolling_machine\</mcitem\> recipe:\
+\<recipe\> input techreborn:aluminum_ingot techreborn:aluminum_ingot techreborn:aluminum_ingot input techreborn:magnesium_dust techreborn:magnesium_dust techreborn:magnesium_dust input techreborn:aluminum_ingot techreborn:aluminum_ingot techreborn:aluminum_ingot output techreborn:magnalium_plate,3 tool techreborn:rolling_machine \</recipe\>
