--- a/docs/items/ingots/brass_ingot.mdx
+++ b/docs/items/ingots/brass_ingot.mdx
@@ -4,4 +4,32 @@ title: Brass Ingot
 
 <ItemImage file="brass_ingot" alt="Ingots" size="200" />
 
-Ingots are made from Ores.
+# Brass Ingot
+
+**Brass Ingot** is an alloy used to craft several recipes. Tech Reborn doesn't have brass ore.
+
+## Recipe
+
+<CraftingTable recipe="input techreborn:brass_nugget techreborn:brass_nugget techreborn:brass_nugget input techreborn:brass_nugget techreborn:brass_nugget techreborn:brass_nugget input techreborn:brass_nugget techreborn:brass_nugget techreborn:brass_nugget output techreborn:brass_ingot"/>
+<CraftingTable recipe="input air air air input air techreborn:brass_storage_block air input air air air output techreborn:brass_ingot,9"/>
+
+<McItem slug="techreborn:alloy_smelter" inline={true}/> recipes:  
+3x<McItem slug="minecraft:copper_ingot" inline={true}/> + <McItem slug="techreborn:zinc_ingot" inline={true}/> -> 4x <McItem slug="techreborn:brass_ingot" inline={true}/>
+
+Smelting recipe: \<recipe\> size 1x1 input techreborn:brass_dust output techreborn:brass_ingot tool techreborn:iron_furnace \</recipe\>
+
+## Usage
+
+**Brass Ingot** could be used as a **Beacon** payment.
+
+**Brass Ingot** used in several crafting recipes:
+
+- <McItem slug="techreborn:brass_nugget" inline={true}/>
+- <McItem slug="techreborn:brass_storage_block" inline={true}/>
+- <McItem slug="techreborn:mixed_metal_ingot" inline={true}/>
+
+<McItem slug="techreborn:compressor" inline={true}/> recipe:  
+<McItem slug="techreborn:brass_ingot" inline={true}/> -> <McItem slug="techreborn:brass_plate" inline={true}/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:brass_ingot" inline={true}/> -> <McItem slug="techreborn:brass_dust" inline={true}/>
