--- a/docs/items/ingots/invar_ingot.mdx
+++ b/docs/items/ingots/invar_ingot.mdx
@@ -4,4 +4,32 @@ title: Invar Ingot
 
 <ItemImage file="invar_ingot" alt="Ingots" size="200" />
 
-Ingots are made from Ores.
+# Invar Ingot
+
+**Invar Ingot** is used to craft <McItem slug="techreborn:mixed_metal_ingot" inline={true}/> and for further processing. Tech Reborn doesn't have Invar ore.
+
+## Recipe
+
+<CraftingTable recipe="input techreborn:invar_nugget techreborn:invar_nugget techreborn:invar_nugget input techreborn:invar_nugget techreborn:invar_nugget techreborn:invar_nugget input techreborn:invar_nugget techreborn:invar_nugget techreborn:invar_nugget output techreborn:invar_ingot"/>
+<CraftingTable recipe="input air air air input air techreborn:invar_storage_block air input air air air output techreborn:invar_ingot,9"/>
+
+<McItem slug="minecraft:furnace" inline={true}/> recipe:  
+<McItem slug="techreborn:invar_dust" inline={true}/> &rarr; <McItem slug="techreborn:invar_ingot" inline={true}/>
+
+<McItem slug="techreborn:alloy_smelter" inline={true}/> recipe:  
+2x <McItem slug="minecraft:iron_ingot" inline={true}/> + 1x <McItem slug="techreborn:nickel_ingot" inline={true}/> &rarr; 3x <McItem slug="techreborn:invar_ingot" inline={true}/>.
+
+## Usage
+
+**Invar Ingot** could be used as a **Beacon** payment.  
+**Invar Ingot** is used in the following recipes:
+
+- <McItem slug="techreborn:mixed_metal_ingot" inline={true}/>
+- <McItem slug="techreborn:invar_nugget" inline={true}/>
+- <McItem slug="techreborn:invar_storage_block" inline={true}/>
+
+<McItem slug="techreborn:compressor" inline={true}/> recipe:  
+<McItem slug="techreborn:invar_ingot" inline={true}/> &rarr; <McItem slug="techreborn:invar_plate" inline={true}/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:invar_ingot" inline={true}/> &rarr; <McItem slug="techreborn:invar_dust" inline={true}/>
