--- a/docs/items/ingots/lead_ingot.mdx
+++ b/docs/items/ingots/lead_ingot.mdx
@@ -4,4 +4,29 @@ title: Lead Ingot
 
 <ItemImage file="lead_ingot" alt="Ingots" size="200" />
 
-Ingots are made from Ores.
+# Lead Ingot
+
+**Lead Ingot** is an ingot added by Tech Reborn and used in several crafting recipes.
+
+## Recipe
+
+<CraftingTable recipe="input techreborn:lead_nugget techreborn:lead_nugget techreborn:lead_nugget input techreborn:lead_nugget techreborn:lead_nugget techreborn:lead_nugget input techreborn:lead_nugget techreborn:lead_nugget techreborn:lead_nugget output techreborn:lead_ingot"/>
+<CraftingTable recipe="input air air air input air techreborn:lead_storage_block air input air air air output techreborn:lead_ingot,9"/>
+
+Smelting recipes: \<recipe\> size 1x1 input techreborn:raw_lead output techreborn:lead_ingot tool techreborn:iron_furnace \</recipe\>\
+\<recipe\> size 1x1 input techreborn:lead_ore output techreborn:lead_ingot tool techreborn:iron_furnace \</recipe\>\
+\<recipe\> size 1x1 input techreborn:deepslate_lead_ore output techreborn:lead_ingot tool techreborn:iron_furnace \</recipe\>\
+<McItem slug="techreborn:blast_furnace"/> recipe:\
+8x<McItem slug="techreborn:galena_small_dust"/> -\> <McItem slug="techreborn:lead_ingot"/> + <McItem slug="techreborn:silver_ingot"/>\
+2x<McItem slug="techreborn:galena_dust"/> -\> <McItem slug="techreborn:lead_ingot"/> + <McItem slug="techreborn:silver_ingot"/>
+
+## Usage
+
+**Lead Ingot** used in several crafting recipes:
+
+- <McItem slug="techreborn:lead_nugget" inline={true}/>
+- <McItem slug="techreborn:lead_storage_block" inline={true}/>
+- <McItem slug="techreborn:red_cell_battery" inline={true}/>
+
+<McItem slug="techreborn:compressor" inline={true}/> recipe:  
+<McItem slug="techreborn:lead_ingot" inline={true}/> &rarr; <McItem slug="techreborn:lead_plate" inline={true}/>
