--- a/docs/items/ingots/nickel_ingot.mdx
+++ b/docs/items/ingots/nickel_ingot.mdx
@@ -4,4 +4,34 @@ title: Nickel Ingot
 
 <ItemImage file="nickel_ingot" alt="Ingots" size="200" />
 
-Ingots are made from Ores.
+# Nickel Ingot
+
+**Nickel Ingot** used to craft several recipes. Tech Reborn doesn't have Nickel ore. It could be obtained either by processing several ores in <McItem slug="techreborn:industrial_grinder" inline={true}/> or by processing <McItem slug="minecraft:raw_copper" inline={true}/>, <McItem slug="minecraft:raw_gold" inline={true}/> or <McItem slug="minecraft:raw_iron" inline={true}/> in <McItem slug="techreborn:industrial_centrifuge" inline={true}/> if you do not have <McItem slug="techreborn:industrial_grinder" inline={true}/> yet.
+
+## Recipe
+
+<CraftingTable recipe="input techreborn:nickel_nugget techreborn:nickel_nugget techreborn:nickel_nugget input techreborn:nickel_nugget techreborn:nickel_nugget techreborn:nickel_nugget input techreborn:nickel_nugget techreborn:nickel_nugget techreborn:nickel_nugget output techreborn:nickel_ingot"/>
+<CraftingTable recipe="input air air air input air techreborn:nickel_storage_block air input air air air output techreborn:nickel_ingot,9"/>
+Smelting recipe:  
+<McItem slug="techreborn:nickel_dust" inline={true}/> &rarr; <McItem slug="techreborn:nickel_ingot" inline={true}/>
+
+## Usage
+
+**Nickel Ingot** could be used as a **Beacon** payment.
+
+**Crafting** recipes:  
+<CraftingTable recipe="input techreborn:nickel_ingot techreborn:nickel_ingot techreborn:nickel_ingot input techreborn:nickel_ingot techreborn:nickel_ingot techreborn:nickel_ingot input techreborn:nickel_ingot techreborn:nickel_ingot techreborn:nickel_ingot output techreborn:nickel_storage_block"/>
+<CraftingTable recipe="input air air air input air techreborn:nickel_ingot air input air air air output techreborn:nickel_nugget,9"/>
+
+<McItem slug="techreborn:alloy_smelter" inline={true}/> recipes:  
+2x <McItem slug="minecraft:iron_ingot" inline={true}/> + <McItem slug="techreborn:nickel_ingot" inline={true}/> &rarr; 3x <McItem slug="techreborn:invar_ingot" inline={true}/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:nickel_ingot" inline={true}/> &rarr; <McItem slug="techreborn:nickel_dust" inline={true}/>
+
+<McItem slug="techreborn:compressor" inline={true}/> recipe:  
+<McItem slug="techreborn:nickel_ingot" inline={true}/> &rarr; <McItem slug="techreborn:nickel_plate" inline={true}/>
+
+<McItem slug="techreborn:rolling_machine" inline={true}/> recipes:  
+<CraftingTable recipe="input techreborn:nickel_ingot techreborn:copper_ingot techreborn:nickel_ingot input techreborn:copper_ingot air techreborn:copper_ingot input techreborn:nickel_ingot techreborn:copper_ingot techreborn:nickel_ingot output techreborn:cupronickel_heating_coil,3 tool techreborn:rolling_machine"/>
+<CraftingTable recipe="input air techreborn:nickel_ingot air input techreborn:nickel_ingot techreborn:chrome_ingot techreborn:nickel_ingot input air techreborn:nickel_ingot air output techreborn:nichrome_heating_coil,2 tool techreborn:rolling_machine"/>
