--- a/docs/items/ingots/silver_ingot.mdx
+++ b/docs/items/ingots/silver_ingot.mdx
@@ -4,4 +4,37 @@ title: Silver Ingot
 
 <ItemImage file="silver_ingot" alt="Ingots" size="200" />
 
-Ingots are made from Ores.
+# Silver Ingot
+
+**Silver Ingot** is an ingot added by Tech Reborn and used in several crafting recipes.
+
+## Recipe
+
+<CraftingTable recipe="input techreborn:silver_nugget techreborn:silver_nugget techreborn:silver_nugget input techreborn:silver_nugget techreborn:silver_nugget techreborn:silver_nugget input techreborn:silver_nugget techreborn:silver_nugget techreborn:silver_nugget output techreborn:silver_ingot"/>
+<CraftingTable recipe="input air air air input air techreborn:silver_storage_block air input air air air output techreborn:silver_ingot,9"/>
+Smelting recipes: \<recipe\> size 1x1 input techreborn:raw_silver output techreborn:silver_ingot tool techreborn:iron_furnace \</recipe\>\
+\<recipe\> size 1x1 input techreborn:silver_ore output techreborn:silver_ingot tool techreborn:iron_furnace \</recipe\>\
+\<recipe\> size 1x1 input techreborn:deepslate_silver_ore output techreborn:silver_ingot tool techreborn:iron_furnace \</recipe\>\
+<McItem slug="techreborn:blast_furnace" inline={true}/> recipe:  
+8x<McItem slug="techreborn:galena_small_dust" inline={true}/> &rarr; <McItem slug="techreborn:silver_ingot" inline={true}/> + <McItem slug="techreborn:lead_ingot" inline={true}/>  
+2x<McItem slug="techreborn:galena_dust" inline={true}/> &rarr; <McItem slug="techreborn:silver_ingot" inline={true}/> + <McItem slug="techreborn:lead_ingot" inline={true}/>
+<img src="/img/mods/techreborn/silver_chestplate.png" width="24" alt="Silver Armor"/> <strong><a href="/items/armor/silver_armor">Silver Armor</a></strong> recycling
+
+## Usage
+
+**Silver Ingot** could be used as a **Beacon** payment.
+
+**Silver Ingot** used in several crafting recipes:
+
+- <McItem slug="techreborn:silver_nugget" inline={true}/>
+- <McItem slug="techreborn:silver_storage_block" inline={true}/>
+- <McItem slug="techreborn:silver_helmet" inline={true}/>
+- <McItem slug="techreborn:silver_chestplate" inline={true}/>
+- <McItem slug="techreborn:silver_leggings" inline={true}/>
+- <McItem slug="techreborn:silver_boots" inline={true}/>
+
+<McItem slug="techreborn:compressor" inline={true}/> recipe:  
+<McItem slug="techreborn:silver_ingot" inline={true}/> &rarr; <McItem slug="techreborn:silver_plate" inline={true}/>
+
+<McItem slug="techreborn:alloy_smelter" inline={true}/> recipes:  
+<McItem slug="minecraft:gold_ingot" inline={true}/> + <McItem slug="techreborn:silver_ingot" inline={true}/> &rarr; 2x <McItem slug="techreborn:electrum_ingot" inline={true}/>
