--- a/docs/items/ingots/steel_ingot.mdx
+++ b/docs/items/ingots/steel_ingot.mdx
@@ -4,4 +4,42 @@ title: Steel Ingot
 
 <ItemImage file="steel_ingot" alt="Ingots" size="200" />
 
-Ingots are made from Ores.
+# Steel Ingot
+
+**Steel Ingot** is used in a number of recipes. It is an alloy ingot.
+
+## Recipe
+
+<CraftingTable recipe="input techreborn:steel_nugget techreborn:steel_nugget techreborn:steel_nugget input techreborn:steel_nugget techreborn:steel_nugget techreborn:steel_nugget input techreborn:steel_nugget techreborn:steel_nugget techreborn:steel_nugget output techreborn:steel_ingot"/>
+<CraftingTable recipe="input air air air input air techreborn:steel_storage_block air input air air air output techreborn:steel_ingot,9"/>
+
+<McItem slug="techreborn:blast_furnace" inline={true}/> recipes. All recipes require 1000 heat:  
+- <McItem slug="techreborn:refined_iron_ingot" inline={true}/> + 4x <McItem slug="techreborn:coal_dust" inline={true}/> &rarr; <McItem slug="techreborn:steel_ingot" inline={true}/> + 2x <McItem slug="techreborn:dark_ashes_dust" inline={true}/>
+- <McItem slug="techreborn:refined_iron_ingot" inline={true}/> + 2x <McItem slug="techreborn:carbon_cell" inline={true}/> &rarr; <McItem slug="techreborn:steel_ingot" inline={true}/> + 2x <McItem slug="techreborn:empty_cell" inline={true}/>
+- <McItem slug="techreborn:steel_helmet" inline={true}/> + <McItem slug="minecraft:sand" inline={true}/> &rarr; 3x<McItem slug="techreborn:steel_ingot" inline={true}/> + <McItem slug="techreborn:dark_ashes_dust" inline={true}/>
+- <McItem slug="techreborn:steel_chestplate" inline={true}/> + <McItem slug="minecraft:sand" inline={true}/> &rarr; 5x<McItem slug="techreborn:steel_ingot" inline={true}/> + <McItem slug="techreborn:dark_ashes_dust" inline={true}/>
+- <McItem slug="techreborn:steel_leggings" inline={true}/> + <McItem slug="minecraft:sand" inline={true}/> &rarr; 4x<McItem slug="techreborn:steel_ingot" inline={true}/> + <McItem slug="techreborn:dark_ashes_dust" inline={true}/>
+- <McItem slug="techreborn:steel_boots" inline={true}/> + <McItem slug="minecraft:sand" inline={true}/> &rarr; 2x<McItem slug="techreborn:steel_ingot" inline={true}/> + <McItem slug="techreborn:dark_ashes_dust" inline={true}/>
+- <McItem slug="techreborn:steel_dust" inline={true}/> &rarr; <McItem slug="techreborn:steel_ingot" inline={true}/>
+
+## Usage
+
+**Steel Ingot** could be used as a **Beacon** payment.
+
+**Steel Ingot** is used in the following <McItem slug="minecraft:crafting_table" inline={true}/> recipes:
+
+- <McItem slug="techreborn:tungsten_grinding_head" inline={true}/>
+- <McItem slug="techreborn:diamond_grinding_head" inline={true}/>
+- <McItem slug="techreborn:diamond_saw_blade" inline={true}/>
+- <McItem slug="techreborn:steel_nugget" inline={true}/>
+- <McItem slug="techreborn:steel_storage_block" inline={true}/>
+- <McItem slug="techreborn:steel_helmet" inline={true}/>, <McItem slug="techreborn:steel_chestplate" inline={true}/>, <McItem slug="techreborn:steel_leggings" inline={true}/>, <McItem slug="techreborn:steel_boots" inline={true}/>
+
+<McItem slug="techreborn:compressor" inline={true}/> recipe:  
+<McItem slug="techreborn:steel_ingot" inline={true}/> &rarr; <McItem slug="techreborn:steel_plate" inline={true}/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:steel_ingot" inline={true}/> &rarr; <McItem slug="techreborn:steel_dust" inline={true}/>
+
+<McItem slug="techreborn:blast_furnace" inline={true}/> recipe:  
+<McItem slug="techreborn:steel_ingot" inline={true}/> + <McItem slug="techreborn:tungsten_ingot" inline={true}/> &rarr; <McItem slug="techreborn:hot_tungstensteel_ingot" inline={true}/> + <McItem slug="techreborn:dark_ashes_dust" inline={true}/>
