--- a/docs/items/ingots/tin_ingot.mdx
+++ b/docs/items/ingots/tin_ingot.mdx
@@ -4,4 +4,60 @@ title: Tin Ingot
 
 <ItemImage file="tin_ingot" alt="Ingots" size="200" />
 
-Ingots are made from Ores.
+# Tin Ingot
+
+**Tin Ingot** is an ingot added by Tech Reborn and used in several crafting recipes.
+
+## Recipe
+
+#### Crafting Table Recipe
+
+<CraftingTable recipe="input techreborn:tin_nugget techreborn:tin_nugget techreborn:tin_nugget input techreborn:tin_nugget techreborn:tin_nugget techreborn:tin_nugget input techreborn:tin_nugget techreborn:tin_nugget techreborn:tin_nugget output techreborn:tin_ingot"/>
+<CraftingTable recipe="input air air air input air techreborn:tin_storage_block air input air air air output techreborn:tin_ingot,9"/>
+
+#### Smelting Recipe
+
+Main source of **Tin Ingot** is smelting <McItem slug="techreborn:raw_tin"/> in any kind of Furnaces, including <McItem slug="minecraft:furnace"/>, <McItem slug="techreborn:iron_furnace"/> or <McItem slug="techreborn:electric_furnace"/>.
+
+\<recipe\> size 1x1 input techreborn:raw_tin output techreborn:tin_ingot tool techreborn:electric_furnace \</recipe\>
+
+\
+\<recipe\> size 1x1 input techreborn:tin_ore output techreborn:tin_ingot tool techreborn:electric_furnace \</recipe\>
+
+\
+\<recipe\> size 1x1 input techreborn:deepslate_tin_ore output techreborn:tin_ingot tool techreborn:electric_furnace \</recipe\>
+
+## Usage
+
+**Tin Ingot** could be used as a **Beacon** payment.
+
+**Tin Ingot** used in several crafting recipes:
+
+- <McItem slug="techreborn:tin_cable" inline={true}/>
+- <McItem slug="techreborn:empty_cell" inline={true}/>
+- <McItem slug="techreborn:mixed_metal_ingot" inline={true}/>
+- <McItem slug="techreborn:solid_canning_machine" inline={true}/>
+- <McItem slug="techreborn:tin_nugget" inline={true}/>
+- <McItem slug="techreborn:tin_storage_block" inline={true}/>
+- <McItem slug="techreborn:helium_coolant_cell_180k" inline={true}/>
+- <McItem slug="techreborn:helium_coolant_cell_360k" inline={true}/>
+- <McItem slug="techreborn:helium_coolant_cell_60k" inline={true}/>
+- <McItem slug="techreborn:nak_coolant_cell_180k" inline={true}/>
+- <McItem slug="techreborn:nak_coolant_cell_360k" inline={true}/>
+- <McItem slug="techreborn:nak_coolant_cell_60k" inline={true}/>
+- <McItem slug="techreborn:water_coolant_cell_10k" inline={true}/>
+- <McItem slug="techreborn:water_coolant_cell_30k" inline={true}/>
+- <McItem slug="techreborn:water_coolant_cell_60k" inline={true}/>
+
+<McItem slug="techreborn:alloy_smelter" inline={true}/> recipe:  
+3x<McItem slug="minecraft:copper_ingot" inline={true}/> + <McItem slug="techreborn:tin_ingot" inline={true}/> &rarr; 4x <McItem slug="techreborn:bronze_ingot" inline={true}/>
+
+<McItem slug="techreborn:compressor" inline={true}/> recipe:  
+<McItem slug="techreborn:tin_ingot" inline={true}/> &rarr; <McItem slug="techreborn:tin_plate" inline={true}/>
+
+<McItem slug="techreborn:solid_canning_machine" inline={true}/> recipe:  
+- <McItem slug="techreborn:water_cell" inline={true}/> + 2x <McItem slug="techreborn:tin_ingot" inline={true}/> &rarr; 2x <McItem slug="techreborn:water_coolant_cell_10k" inline={true}/>
+- <McItem slug="techreborn:helium_cell" inline={true}/> + 2x <McItem slug="techreborn:tin_ingot" inline={true}/> &rarr; <McItem slug="techreborn:helium_coolant_cell_60k" inline={true}/>
+
+<McItem slug="techreborn:wire_mill" inline={true}/> recipe:  
+<McItem slug="techreborn:tin_ingot" inline={true}/> &rarr; 6x <McItem slug="techreborn:tin_cable" inline={true}/>
