--- a/docs/items/ingots/tungsten_ingot.mdx
+++ b/docs/items/ingots/tungsten_ingot.mdx
@@ -4,4 +4,33 @@ title: Tungsten Ingot
 
 <ItemImage file="tungsten_ingot" alt="Ingots" size="200" />
 
-Ingots are made from Ores.
+# Tungsten Ingot
+
+**Tungsten Ingot** is an ingot used in several recipes.
+
+## Recipe
+
+<CraftingTable recipe="input techreborn:tungsten_nugget techreborn:tungsten_nugget techreborn:tungsten_nugget input techreborn:tungsten_nugget techreborn:tungsten_nugget techreborn:tungsten_nugget input techreborn:tungsten_nugget techreborn:tungsten_nugget techreborn:tungsten_nugget output techreborn:tungsten_ingot"/>
+<CraftingTable recipe="input air air air input air techreborn:tungsten_storage_block air input air air air output techreborn:tungsten_ingot,9"/>
+<McItem slug="techreborn:blast_furnace" inline={true}/> recipe:  
+Recipes require 2500 heat.  
+\<recipe\> size 1x2 input techreborn:raw_tungsten air output techreborn:tungsten_ingot tool techreborn:blast_furnace \</recipe\>\
+\<recipe\> size 1x2 input techreborn:tungsten_small_dust,4 air output techreborn:tungsten_ingot tool techreborn:blast_furnace \</recipe\>
+
+## Usage
+
+**Tungsten Ingot** could be used as a **Beacon** payment.
+
+**Tungsten Ingot** used in several crafting recipes:
+
+- <McItem slug="techreborn:tungsten_nugget" inline={true}/>
+- <McItem slug="techreborn:tungsten_storage_block" inline={true}/>
+- <McItem slug="techreborn:tungsten_grinding_head" inline={true}/>
+- <McItem slug="techreborn:superconductor" inline={true}/>
+- <McItem slug="techreborn:energy_flow_chip" inline={true}/>
+- <McItem slug="techreborn:mixed_metal_ingot" inline={true}/>
+
+<McItem slug="techreborn:blast_furnace" inline={true}/> recipe:  
+<McItem slug="techreborn:steel_ingot" inline={true}/> + <McItem slug="techreborn:tungsten_ingot" inline={true}/> &rarr; <McItem slug="techreborn:hot_tungstensteel_ingot" inline={true}/> + <McItem slug="techreborn:dark_ashes_dust" inline={true}/>
+
+<McItem slug="techreborn:compressor"/> recipe: \<recipe\> size 1x1 input techreborn:tungsten_ingot output techreborn:tungsten_plate tool techreborn:compressor \</recipe\>
