--- a/docs/items/ingots/zinc_ingot.mdx
+++ b/docs/items/ingots/zinc_ingot.mdx
@@ -4,4 +4,33 @@ title: Zinc Ingot
 
 <ItemImage file="zinc_ingot" alt="Ingots" size="200" />
 
-Ingots are made from Ores.
+# Zinc Ingot
+
+**Zinc Ingot** used to craft several recipes. Tech Reborn doesn't have Zinc ore. It could be obtained in nugget or dust form by processing other ores.
+
+## Recipe
+
+<CraftingTable recipe="input techreborn:zinc_nugget techreborn:zinc_nugget techreborn:zinc_nugget input techreborn:zinc_nugget techreborn:zinc_nugget techreborn:zinc_nugget input techreborn:zinc_nugget techreborn:zinc_nugget techreborn:zinc_nugget output techreborn:zinc_ingot"/>
+<CraftingTable recipe="input air air air input air techreborn:zinc_storage_block air input air air air output techreborn:zinc_ingot,9"/>
+
+**Smelting** recipe:  
+<McItem slug="techreborn:zinc_dust" inline={true}/> &rarr; <McItem slug="techreborn:zinc_ingot" inline={true}/>
+
+## Usage
+
+**Zinc Ingot** could be used as a **Beacon** payment.
+
+**Crafting** recipes:
+
+- <McItem slug="techreborn:zinc_storage_block" inline={true}/>
+- <McItem slug="techreborn:zinc_nugget" inline={true}/>
+- <McItem slug="techreborn:mixed_metal_ingot" inline={true}/>
+
+<McItem slug="techreborn:alloy_smelter" inline={true}/> recipe:  
+3x <McItem slug="minecraft:copper_ingot" inline={true}/> + <McItem slug="techreborn:zinc_ingot" inline={true}/> &rarr; 4x <McItem slug="techreborn:brass_ingot" inline={true}/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:zinc_ingot" inline={true}/> &rarr; <McItem slug="techreborn:zinc_dust" inline={true}/>
+
+<McItem slug="techreborn:compressor" inline={true}/> recipe:  
+<McItem slug="techreborn:zinc_ingot" inline={true}/> &rarr; <McItem slug="techreborn:zinc_plate" inline={true}/>
